# osv.dev

./: .gcloudignore  .gitignore  .gitmodules  .golangci.yaml  .markdownlint.json  .pylintrc  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  SECURITY.md  __init__.py  aahh.txt  bug.py  bug_test.py  build_protos.sh  cloudbuild.yaml  go.work  go.work.sum  impact.py  logs.py  mlc_config.json  my_repos.py  osv-scanner.toml  osv.dev.code-workspace  process_cves.sh  purl_helpers_test.py  pyproject.toml  renovate.json  run_tests.sh  semver_index.py  setup.py  source.yaml  source_repo_test_db.yaml  source_test.yaml  sourcerepository.yaml  (+4 more)
docker/worker/: .gitignore  Dockerfile  Pipfile  build.sh  daemon.json  oss_fuzz.py  pyproject.toml  run_tests.sh  worker.py  worker_test.py
docker/worker/testdata/: BLAH-123.old.yaml  BLAH-123.yaml  BLAH-124.old.yaml  BLAH-124.yaml  BLAH-125.yaml  BLAH-126.yaml  BLAH-127.old.yaml  BLAH-127.yaml  BLAH-128.yaml  BLAH-129.yaml  BLAH-130.yaml  BLAH-131.yaml  CVE-2022-27449.json  DSA-3029-1.json  GHSA-838r-hvwh-24h8.json  ImpactTest_basic.txt  ImpactTest_fixed_range_too_long.txt  ImpactTest_not_fixed.txt  ImpactTest_range.txt  ImpactTest_simplify_range.txt  ImpactTest_zero_regression_range.txt  OSV-124.yaml  OSV-129.yaml  PYSEC-123.yaml  PYSEC-124.yaml  PYSEC-456.yaml  RESTUpdateTest_update_no_introduced.txt  TEST-last-affected-01.yaml  UpdateTest_analysis_crash_handling.txt  UpdateTest_diff_alpine.txt  UpdateTest_diff_debian.txt  UpdateTest_diff_last_affected.txt  UpdateTest_diff_last_affected_git.txt  UpdateTest_diff_maven.txt  UpdateTest_diff_normalized_pypi.txt  UpdateTest_diff_pypi.txt  UpdateTest_diff_pypi_pre_0_8.txt  UpdateTest_diff_update.txt  UpdateTest_diff_update_add_fix.txt  UpdateTest_diff_update_add_fix_pre_0_8.txt  (+33 more)
gcp/api/: .gcloudignore  .gitignore  Dockerfile  Dockerfile.esp  Pipfile  README.md  api_descriptor.pb  build_esp_image  cloudbuild.yaml  cursor.py  deploy_backend  deploy_service_proxy  gen-proto.sh  importfinding_pb2.py  importfinding_pb2.pyi  importfinding_pb2_grpc.py  importfinding_pb2_grpc.pyi  integration_tests.py  osv_service.proto  osv_service_pb2.py  osv_service_pb2_grpc.py  osv_service_v1_pb2.py  osv_service_v1_pb2.pyi  osv_service_v1_pb2_grpc.py  osv_service_v1_pb2_grpc.pyi  pyproject.toml  requirements.txt  run_apitester.py  run_tests.sh  run_tests_e2e.sh  server.py  server_new.py  server_test.py  snapshot_tests.yaml  test_server.py  testing_runner.py  vulnerability_pb2.py  vulnerability_pb2_grpc.py  vulnerability_pb2_grpc.pyi
gcp/api/docs/: README.md  build.py  go.sum  osv_service_v1.swagger.json  tools.go
gcp/api/fixtures/: IntegrationTests_api_query_response.txt  api_query_response.txt
gcp/api/osv/: importfinding_pb2.py  importfinding_pb2_grpc.py
gcp/api/v1/: README.md  api_config_staging.yaml  api_config_test.yaml  api_descriptor.pb  googleapis  grpc_cmd.sh  osv  osv_service_v1.proto
gcp/appengine/: .gcloudignore  .gitignore  Dockerfile  Pipfile  app.yaml  build.sh  cache.py  cleanup_versions.sh  cron-service.yaml  cron.yaml  deploy-staging.sh  deploy.sh  frontend_handlers.py  frontend_handlers_test.py  generate_sitemap.py  generate_sitemap_test.py  handlers.py  index.yaml  main.py  models.py  monorail.py  osv  package-lock.json  pyproject.toml  rate_limiter.py  requirements.txt  run_tests.sh  source_mapper.py  staging-app.yaml  staging.yaml  testing-app.yaml  utils.py  utils_test.py
gcp/appengine/blog/: README.md  hugo.toml
gcp/appengine/blog/layouts/: index.html
gcp/appengine/docs/: index.html  osv_service_v1.swagger.json
gcp/appengine/frontend/: .env.development  .env.production  README.md  babel.config.js  package-lock.json  package.json  vue.config.js
gcp/appengine/frontend/public/: index.html
gcp/appengine/frontend/src/: App.vue  main.js
gcp/appengine/frontend3/: package-lock.json  package.json  webpack.config.js  webpack.dev.js  webpack.prod.js
gcp/appengine/frontend3/src/: base.html  index.js  styles.scss
gcp/functions/pypi/: .gcloudignore  Pipfile  deploy.sh  main.py  main_test.py  publish_pypi.py  publish_pypi_test.py  pyproject.toml  requirements.txt
gcp/functions/pypi/testdata/: fake_pub_key.pem  fake_secret.json  test_vuln.json  test_vuln_withdrawn.json
gcp/mcp/: README.md  pyproject.toml  server.py  start_server.sh
gcp/website/: Dockerfile  auth.py  build.sh  cache.py  cloudbuild.yaml  emulator_aliases.py  emulator_upstream.py  frontend_emulator.py  frontend_handlers.py  frontend_handlers_test.py  handlers.py  linter_api.py  linter_api_test.py  main.py  pyproject.toml  rate_limiter.py  run_tests.sh  source_mapper.py  triage_handlers.py  utils.py
gcp/website/blog/: README.md  hugo.toml
gcp/website/blog/archetypes/: default.md
gcp/website/blog/layouts/: index.html
gcp/website/docs/: index.html  osv_service_v1.swagger.json
gcp/website/frontend3/: osv-scanner.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  webpack.dev.js  webpack.prod.js
gcp/website/frontend3/src/: base.html  index.js  linter.js  linter.scss  osv-tabs-accordion.js  osv-tabs.js  search.js  styles.scss  triage.js  triage.scss
gcp/website/testdata/osv/: ALIAS-CVE-1.json  ALIAS.json  CVE-1.json  CVE-2.json  CVE-2021-44228.json  CVE-2023-21400.json  CVE-3.json  CVE-4.json  CVE-5.json  CYCLE-ROOT-1.json  CYCLE-ROOT-2.json  CYCLE-ROOT-3.json  (+15 more)
gcp/workers/oss_fuzz_worker/: Dockerfile  oss_fuzz.py  osv-test  pyproject.toml  testdata  worker.py  worker_test.py
gcp/workers/worker/: .gcloudignore  .gitignore  Dockerfile  build.sh  oss_fuzz.py  pyproject.toml  run_tests.sh  worker.py  worker_test.py
tools/api-performance-test/: .gitignore  performance.py  pyproject.toml
tools/datafix/: Pipfile  README.md  delete_bugs.py  delete_bugs_with_source.py  delete_invalid.py  list_ids_for_source.py  pyproject.toml  re_put_bugs.py  refresh_ids.py  reimport_gcs_record.py  reput_all.py  reput_bugs.py  reput_helper.py  request_worker_update_record.py  withdraw_invalid.py
tools/datafix/old/: README.md  reput_helper.py  withdraw_invalid.py
(+1655 files in other folders)
