[tool.poetry]
name = "worker"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.147"
google-cloud-pubsub = "==2.25.2"
google-cloud-ndb = "==2.3.2"
google-cloud-storage = "==2.18.2"
PyYAML = "==6.0.2"
redis = "==5.1.0"
pygit2 = "==1.15.1"
requests = "==2.32.3"
jsonschema = "==4.23.0"

osv = { path = "../../", develop = true }

[tool.poetry.dev-dependencies]
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
