[project]
name = "api-backend"
requires-python = ">=3.13,<4.0"
dependencies = [
    "google-cloud-ndb==2.3.4",
    "google-cloud-logging==3.12.1",
    "packaging==24.2",
    "requests==2.32.5",
    "grpcio==1.75.0",
    "grpcio-reflection==1.75.0",
    "grpcio-health-checking==1.75.0",
    "osv",
]

[tool.poetry]
package-mode = false 


[tool.poetry.dependencies]
osv = { path = "../../", develop = true }

[tool.poetry.group.dev.dependencies]
grpcio-tools = "*"
mypy-protobuf = "^3.6.0"
yapf = "*"
pylint = "*"
poethepoet = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
gen-proto = "python -m grpc_tools.protoc --include_imports --include_source_info --proto_path=googleapis --proto_path=. --proto_path=v1 --proto_path=../../osv --proto_path=../../osv/osv-schema/proto --descriptor_set_out=api_descriptor.pb --python_out=. --grpc_python_out=. --mypy_out=. --mypy_grpc_out=. vulnerability.proto importfinding.proto osv_service_v1.proto"
