[project]
name = "api-backend"
requires-python = ">=3.13,<4.0"
dependencies = [
    "google-cloud-ndb==2.4.2",
    "google-cloud-logging==3.15.0",
    "packaging==26.0",
    "requests==2.33.1",
    "grpcio==1.75.0",
    "grpcio-reflection==1.75.0",
    "grpcio-health-checking==1.75.0",
    "osv",
]

[tool.poetry]
package-mode = false 


[tool.poetry.dependencies]
osv = { path = "../../", develop = true }

[tool.poetry.group.dev.dependencies]
grpcio-tools = "*"
mypy-protobuf = "^5.0.0"
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
