[tool.poetry]
name = "appengine-backend"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

Flask = "==2.3.3"
Flask-Caching = "==2.3.0"
Flask-Compress = "==1.15"
werkzeug = "==3.0.3"
google-cloud-ndb = "==2.3.1"
google-cloud-logging = "==3.11.0"
jinja2 = "==3.1.4"
markdown2 = "==2.5.0"
markupsafe = "==2.1.5"
redis = "==4.6.0"
requests = "==2.32.3"
gunicorn = "==22.0.0"
whitenoise = "==6.7.0"
cvss = "==3.1"

osv = { path = "../../", develop = true }

[tool.poetry.dev-dependencies]
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
