[project]
name = "website-backend"
requires-python = ">=3.11,<4.0"
dependencies = [
    "Flask==2.3.3",
    "Flask-Caching==2.3.1",
    "Flask-Compress==1.18",
    "werkzeug==3.1.3",
    "google-auth==2.40.3",
    "google-cloud-ndb==2.3.4",
    "google-cloud-logging==3.12.1",
    "jinja2==3.1.6",
    "markdown2==2.5.4",
    "markupsafe==2.1.5",
    "packageurl-python==0.17.3",
    "redis==4.6.0",
    "requests==2.32.4",
    "gunicorn==23.0.0",
    "whitenoise==6.9.0",
    "cvss==3.6",
    "osv",
]

[tool.poetry]
package-mode = false 

[tool.poetry.dependencies]
osv = { path = "../../", develop = true }

[tool.poetry.group.dev.dependencies]
yapf = "*"
pylint = "*"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"