[project]
name = "website-backend"
requires-python = ">=3.13,<4.0"
dependencies = [
    "Flask==2.3.3",
    "Flask-Caching==2.3.1",
    "Flask-Compress==1.23",
    "werkzeug==3.1.4",
    "google-auth==2.45.0",
    "google-cloud-ndb==2.4.0",
    "google-cloud-logging==3.13.0",
    "google-cloud-storage==2.18.2",
    "jinja2==3.1.6",
    "markdown2==2.5.4",
    "markupsafe==2.1.5",
    "packageurl-python==0.17.6",
    "redis==4.6.0",
    "requests==2.32.5",
    "gunicorn==23.0.0",
    "whitenoise==6.11.0",
    "cvss==3.6",
    "osv",
]

[tool.poetry]
package-mode = false 

[tool.poetry.dependencies]
osv = { path = "../../", develop = true }

[tool.poetry.group.dev.dependencies]
yapf = "*"
pylint = "*"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"