[project]
name = "website-backend"
requires-python = ">=3.13,<4.0"
dependencies = [
    "Flask==3.1.3",
    "Flask-Caching==2.4.0",
    "Flask-Compress==1.24",
    "werkzeug==3.1.8",
    "google-auth==2.50.0",
    "google-cloud-ndb==2.4.2",
    "google-cloud-logging==3.15.0",
    "google-cloud-storage==3.10.1",
    "jinja2==3.1.6",
    "markdown2==2.5.5",
    "markupsafe==3.0.3",
    "packageurl-python==0.17.6",
    "redis==6.4.0",
    "requests==2.33.1",
    "gunicorn==25.3.0",
    "whitenoise==6.12.0",
    "cvss==3.6",
    "osv",
]

[tool.poetry]
package-mode = false 

[tool.poetry.dependencies]
osv = { path = "../../", develop = true }

[tool.poetry.group.dev.dependencies]
yapf = "*"
pylint = "*"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"