[tool.poetry]
name = "api-perfomance-test"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

aiohttp = "^3.10.5"

osv = { path = "../../", develop = true }

[tool.poetry.dev-dependencies]
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
