[project]
name = "datafix"
requires-python = ">=3.11,<4.0"
dependencies = [
    "google-cloud-ndb==2.3.2",
    "google-cloud-storage==2.19.0",
    "pyyaml==6.0.2",
    "osv @ {path=\"../../\",develop=true}",
    "google-cloud-pubsub>=2.25.2", 
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
