[project]
name = "datafix"
requires-python = ">=3.13,<4.0"
dependencies = [
    "google-cloud-ndb==2.4.0",
    "google-cloud-storage==3.9.0",
    "pyyaml==6.0.3",
    "osv",
    "google-cloud-pubsub>=2.25.2", 
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
osv = { path = "../../", develop = true }

[tool.poetry.group.dev.dependencies]
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
