[project]
name = "pypi-publish"
requires-python = ">=3.13,<4.0"
dependencies = [
    "cryptography (==44.0.3)",
    "google-cloud-secret-manager (==2.25.0)",
    "osv (==0.1.2)",
    "requests (==2.32.5)",
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
