[project]
name = "pypi-publish"
requires-python = ">=3.13,<4.0"
dependencies = [
    "cryptography (==49.0.0)",
    "google-cloud-secret-manager (==2.30.0)",
    "osv (==0.1.3)",
    "requests (==2.34.2)",
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
