[project]
name = "worker"
requires-python = ">=3.13,<3.14"
dependencies = [
    "google-auth-httplib2==0.4.0",
    "google-api-python-client==2.197.0",
    "google-cloud-pubsub==2.39.0",
    "google-cloud-ndb==2.5.0",
    "google-cloud-storage==3.12.0",
    "pyyaml==6.0.3",
    "redis==6.4.0",
    "packageurl-python==0.17.6",
    "pygit2==1.19.3",
    "requests==2.34.2",
    "jsonschema==4.26.0",
    "vanir==1.1.0",
    "osv",
]

[tool.poetry]
package-mode = false  

[tool.poetry.dependencies]
osv = { path = "../../../", develop = true }

[tool.poetry.group.dev.dependencies] 
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
