[project]
name = "worker"
requires-python = ">=3.11,<4.0"
dependencies = [
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.176.0",
    "google-cloud-pubsub==2.31.0",
    "google-cloud-ndb==2.3.4",
    "google-cloud-storage==2.19.0",
    "pyyaml==6.0.2",
    "redis==5.3.0",
    "packageurl-python==0.17.1",
    "pygit2==1.18.0",
    "requests==2.32.4",
    "jsonschema==4.24.0",
    "osv",
]

[tool.poetry]
package-mode = false  

[tool.poetry.dependencies]
osv = { path = "../../../", develop = true }

[tool.poetry.group.dev.dependencies] 
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"