[project]
name = "worker"
requires-python = ">=3.13,<3.14"
dependencies = [
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.181.0",
    "google-cloud-pubsub==2.31.1",
    "google-cloud-ndb==2.3.4",
    "google-cloud-storage==2.19.0",
    "pyyaml==6.0.2",
    "redis==5.3.1",
    "packageurl-python==0.17.5",
    "pygit2==1.18.2",
    "requests==2.32.5",
    "jsonschema==4.25.1",
    "vanir==1.0.2rc1",
    "osv",
]

[tool.poetry]
package-mode = false  

[tool.poetry.dependencies]
osv = { path = "../../../", develop = true }
vanir = { source = "test-pypi" }

[tool.poetry.group.dev.dependencies] 
yapf = "*"
pylint = "*"


[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"