[project]
name = "worker"
requires-python = ">=3.13,<3.14"
dependencies = [
    "google-auth-httplib2==0.3.0",
    "google-api-python-client==2.187.0",
    "google-cloud-pubsub==2.34.0",
    "google-cloud-ndb==2.4.0",
    "google-cloud-storage==2.19.0",
    "pyyaml==6.0.3",
    "redis==5.3.1",
    "packageurl-python==0.17.6",
    "pygit2==1.19.0",
    "requests==2.32.5",
    "jsonschema==4.25.1",
    "vanir==1.0.2",
    "osv",
]

[tool.poetry]
package-mode = false  

[tool.poetry.dependencies]
osv = { path = "../../../", develop = true }

[tool.poetry.group.dev.dependencies] 
yapf = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
